# hide-seek-server

./: .env  .gitignore  BUILD  BUILD.bazel  CHANGELOG  CODEOWNERS  Dockerfile  HideSeek-Server  LICENSE  Makefile  README.md  WORKSPACE  bazel-HideSeek-Server  bazel-bin  bazel-out  bazel-testlogs  deps.bzl  go.mod  go.sum  main.go
Components/: components.go
MessageParser/: messageparser.go  responseparser.go
Utils/: utils.go
api/: BUILD.bazel  external.proto  internal.proto
build_configs/docker/: docker-compose.yaml
cmd/: BUILD.bazel  main.go
configs/: BUILD.bazel  Dockerfile.prometheus  Dockerfile.server  grafana_dashboards.json  grafana_datasource.yml  hide-seek-server.config  hide-seek-server.plist  hide-seek-server.service  prometheus.yml
docs/: README.md
internal/api/: api.pb.go  api.proto  api_grpc.pb.go
internal/api/external-api/v1/implementation/: BUILD.bazel  block.out  cpu.out  imeplementation.go  implementation.go  implementation_test.go  mem.out
internal/api/external-api/v1/proto/: BUILD.bazel  api.pb.go  api.proto  api_grpc.pb.go  external.pb.go  external_grpc.pb.go
internal/api/internal-api/v1/implementation/: BUILD.bazel  shit
internal/api/internal-api/v1/proto/: BUILD.bazel  api.proto  internal.pb.go  internal_grpc.pb.go
internal/cache/: BUILD.bazel  cache.go
internal/collection/: cache.go  collection.go  user.go  world.go
internal/db/: BUILD.bazel  db.go
internal/handlers/: close_game_session.go  init_world_user_spawns.go  reg_user.go  reg_world.go  update_world_users.go
internal/interceptors/: BUILD.bazel  interceptors.go
internal/interceptors/external-api/: BUILD.bazel  external-api.go
internal/interceptors/general/: general.go
internal/models/: world.go
internal/monitoring/: BUILD.bazel  monitoring.go
internal/monitoring/register_manager/: BUILD.bazel  register_manager.go
internal/monitoring/register_manager/registers/common/: BUILD.bazel  common.go
internal/monitoring/register_manager/registers/counter/: BUILD.bazel  counter.go
internal/monitoring/register_manager/registers/gauge/: gauge.go
internal/monitoring/register_manager/registers/histogram/: histogram.go
internal/old/handlers/: add_user_to_world.go  reg_user.go  reg_world.go  update_world.go
internal/old/storage/: storage.go
internal/old/storage/external-api/: external-api.go
internal/profiling/: profiling.go
internal/server/: server.go
internal/services/afk/: BUILD.bazel  afk.go
internal/storage/: BUILD.bazel  storage.go
internal/storage/cache/: BUILD.bazel  cache.go
internal/storage/db/: BUILD.bazel  db.go
internal/storage/db/provider/: BUILD.bazel  provider.go
internal/storage/db/provider/collection_manager/: BUILD.bazel  collection_manager.go
internal/storage/external-api/: external-api.go
internal/storage/internal-api/: storage.go
internal/storage/local/: BUILD.bazel  local.go
internal/storage/local/ammo/: BUILD.bazel  ammo.go  ammo_test.go
internal/storage/local/common/: BUILD.bazel  common.go
internal/storage/local/cooldown/: BUILD.bazel  cooldown.go
internal/storage/local/elements/: BUILD.bazel  elements.go
internal/storage/local/maps/: BUILD.bazel  maps.go
internal/storage/local/pcs/: BUILD.bazel  pcs.go
internal/storage/local/weapons/: BUILD.bazel  weapons.go
internal/storage/local/worlds/: BUILD.bazel  worlds.go
scripts/: deps_installer.sh  run_grafana.sh
tools/cli/: cli.go
tools/params/: BUILD.bazel  params.go
tools/printer/: BUILD.bazel  printer.go
tools/utils/: BUILD.bazel  utils.go
tools/utils/testclient/: testclient.go
