load("@rules_proto_grpc//go:defs.bzl", "go_grpc_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name="external_proto",
    visibility = ["//visibility:public"],
    srcs = [
        "external.proto"],
    deps = [
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:wrappers_proto"],
)

go_grpc_library(
    name = "external_api",
    visibility = ["//visibility:public"],
    importpath = "internal/api/external-api/v1/proto",
    protos = [
        ":external_proto"],
)


# load("@rules_proto//proto:defs.bzl", "proto_library")
# load("@io_bazel_rules_go//go:def.bzl", "go_library")
# load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

# load("@rules_proto//proto:defs.bzl", "proto_library")
# load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
# load("@io_bazel_rules_go//go:def.bzl", "go_library")

# load("@org_pubref_rules_protobuf//go:rules.bzl", "go_proto_library")

# go_proto_library(
#     name = "external_proto",
#     protos = [
#         "external.proto",
#     ],
#     with_grpc = True,
# )

# proto_library(
#     name="external_proto",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "external.proto"],
#     deps = [
#         "@com_google_protobuf//:empty_proto",
#         "@com_google_protobuf//:wrappers_proto"],
# )

# proto_library(
#     name="internal_proto",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "internal.proto"],
#     deps = [
#         "@com_google_protobuf//:empty_proto",
#         "@com_google_protobuf//:wrappers_proto"],
# )

# go_proto_library(
#     name="external_proto_go",
#     compilers = ["@io_bazel_rules_go//proto:go_grpc"],
#     importpath = "internal/api/external-api/v1/proto",
#     visibility = ["//visibility:public"],
#     proto = "external_proto",
# )

# go_proto_library(
#     name="internal_proto_go",
#     compilers = ["@io_bazel_rules_go//proto:go_grpc"],
#     importpath = "internal/api/internal-api/v1/proto",
#     visibility = ["//visibility:public"],
#     proto = "internal_proto",
# )

# go_library(
#     name="external_proto_go_lib",
#     deps = [":external_proto_go"],
#     importpath = "internal/api/external-api/v1/proto",
#     visibility = ["//visibility:public"],
# )

# go_library(
#     name="internal_proto_go_lib",
#     deps = [":internal_proto_go"],
#     importpath = "internal/api/internal-api/v1/proto",
#     visibility = ["//visibility:public"],
# )

# proto_library(
#     name = "proto_proto",
#     srcs = [
#         "external.proto",
#         "internal.proto",
#     ],
#     visibility = ["//visibility:public"],
#     deps = [
#         "@com_google_protobuf//:empty_proto",
#         "@com_google_protobuf//:wrappers_proto",
#     ],
# )

# go_proto_library(
#     name = "proto_go_proto",
#     compilers = ["@io_bazel_rules_go//proto:go_grpc"],
#     importpath = "internal/api/internal-api/v1/proto",
#     proto = ":proto_proto",
#     visibility = [
#         "//:__subpackages__",
#         "@alpine_linux_amd64//:__subpackages__",
#         "@bazel_gazelle//:__subpackages__",
#         "@co_honnef_go_tools//:__subpackages__",
#         "@com_github_alecthomas_template//:__subpackages__",
#         "@com_github_alecthomas_units//:__subpackages__",
#         "@com_github_antihax_optional//:__subpackages__",
#         "@com_github_beorn7_perks//:__subpackages__",
#         "@com_github_burntsushi_toml//:__subpackages__",
#         "@com_github_census_instrumentation_opencensus_proto//:__subpackages__",
#         "@com_github_cespare_xxhash//:__subpackages__",
#         "@com_github_cespare_xxhash_v2//:__subpackages__",
#         "@com_github_client9_misspell//:__subpackages__",
#         "@com_github_cncf_udpa_go//:__subpackages__",
#         "@com_github_cncf_xds_go//:__subpackages__",
#         "@com_github_davecgh_go_spew//:__subpackages__",
#         "@com_github_envoyproxy_go_control_plane//:__subpackages__",
#         "@com_github_envoyproxy_protoc_gen_validate//:__subpackages__",
#         "@com_github_franela_goblin//:__subpackages__",
#         "@com_github_ghodss_yaml//:__subpackages__",
#         "@com_github_go_kit_kit//:__subpackages__",
#         "@com_github_go_kit_log//:__subpackages__",
#         "@com_github_go_logfmt_logfmt//:__subpackages__",
#         "@com_github_go_stack_stack//:__subpackages__",
#         "@com_github_gogo_protobuf//:__subpackages__",
#         "@com_github_golang_glog//:__subpackages__",
#         "@com_github_golang_mock//:__subpackages__",
#         "@com_github_golang_protobuf//:__subpackages__",
#         "@com_github_golang_snappy//:__subpackages__",
#         "@com_github_google_go_cmp//:__subpackages__",
#         "@com_github_google_gofuzz//:__subpackages__",
#         "@com_github_google_uuid//:__subpackages__",
#         "@com_github_grpc_ecosystem_grpc_gateway//:__subpackages__",
#         "@com_github_jpillora_backoff//:__subpackages__",
#         "@com_github_json_iterator_go//:__subpackages__",
#         "@com_github_julienschmidt_httprouter//:__subpackages__",
#         "@com_github_klauspost_compress//:__subpackages__",
#         "@com_github_konsorten_go_windows_terminal_sequences//:__subpackages__",
#         "@com_github_kr_logfmt//:__subpackages__",
#         "@com_github_kr_pretty//:__subpackages__",
#         "@com_github_kr_pty//:__subpackages__",
#         "@com_github_kr_text//:__subpackages__",
#         "@com_github_matttproud_golang_protobuf_extensions//:__subpackages__",
#         "@com_github_mbndr_figlet4go//:__subpackages__",
#         "@com_github_modern_go_concurrent//:__subpackages__",
#         "@com_github_modern_go_reflect2//:__subpackages__",
#         "@com_github_montanaflynn_stats//:__subpackages__",
#         "@com_github_mwitkow_go_conntrack//:__subpackages__",
#         "@com_github_oneofone_xxhash//:__subpackages__",
#         "@com_github_pkg_errors//:__subpackages__",
#         "@com_github_pmezard_go_difflib//:__subpackages__",
#         "@com_github_prometheus_client_golang//:__subpackages__",
#         "@com_github_prometheus_client_model//:__subpackages__",
#         "@com_github_prometheus_common//:__subpackages__",
#         "@com_github_prometheus_procfs//:__subpackages__",
#         "@com_github_rogpeppe_fastuuid//:__subpackages__",
#         "@com_github_sirupsen_logrus//:__subpackages__",
#         "@com_github_spaolacci_murmur3//:__subpackages__",
#         "@com_github_stretchr_objx//:__subpackages__",
#         "@com_github_stretchr_testify//:__subpackages__",
#         "@com_github_tidwall_pretty//:__subpackages__",
#         "@com_github_xdg_go_pbkdf2//:__subpackages__",
#         "@com_github_xdg_go_scram//:__subpackages__",
#         "@com_github_xdg_go_stringprep//:__subpackages__",
#         "@com_github_yarikrevich_go_demonizer//:__subpackages__",
#         "@com_github_youmark_pkcs8//:__subpackages__",
#         "@com_github_yuin_goldmark//:__subpackages__",
#         "@com_google_cloud_go//:__subpackages__",
#         "@hide-seek-server//:__subpackages__",
#         "@in_gopkg_alecthomas_kingpin_v2//:__subpackages__",
#         "@in_gopkg_check_v1//:__subpackages__",
#         "@in_gopkg_yaml_v2//:__subpackages__",
#         "@in_gopkg_yaml_v3//:__subpackages__",
#         "@io_bazel_rules_docker//:__subpackages__",
#         "@io_bazel_rules_go//:__subpackages__",
#         "@io_bazel_rules_grafana//:__subpackages__",
#         "@io_bazel_rules_prometheus//:__subpackages__",
#         "@io_opentelemetry_go_proto_otlp//:__subpackages__",
#         "@org_golang_google_appengine//:__subpackages__",
#         "@org_golang_google_genproto//:__subpackages__",
#         "@org_golang_google_grpc//:__subpackages__",
#         "@org_golang_google_protobuf//:__subpackages__",
#         "@org_golang_x_crypto//:__subpackages__",
#         "@org_golang_x_exp//:__subpackages__",
#         "@org_golang_x_lint//:__subpackages__",
#         "@org_golang_x_mod//:__subpackages__",
#         "@org_golang_x_net//:__subpackages__",
#         "@org_golang_x_oauth2//:__subpackages__",
#         "@org_golang_x_sync//:__subpackages__",
#         "@org_golang_x_sys//:__subpackages__",
#         "@org_golang_x_term//:__subpackages__",
#         "@org_golang_x_text//:__subpackages__",
#         "@org_golang_x_tools//:__subpackages__",
#         "@org_golang_x_xerrors//:__subpackages__",
#         "@org_mongodb_go_mongo_driver//:__subpackages__",
#         "@rules_proto//:__subpackages__",
#         "@rules_python//:__subpackages__",
#     ],
# )

# go_library(
#     name = "proto",
#     embed = [":proto_go_proto"],
#     importpath = "internal/api/internal-api/v1/proto",
#     visibility = [
#         "//:__subpackages__",
#         "@alpine_linux_amd64//:__subpackages__",
#         "@bazel_gazelle//:__subpackages__",
#         "@co_honnef_go_tools//:__subpackages__",
#         "@com_github_alecthomas_template//:__subpackages__",
#         "@com_github_alecthomas_units//:__subpackages__",
#         "@com_github_antihax_optional//:__subpackages__",
#         "@com_github_beorn7_perks//:__subpackages__",
#         "@com_github_burntsushi_toml//:__subpackages__",
#         "@com_github_census_instrumentation_opencensus_proto//:__subpackages__",
#         "@com_github_cespare_xxhash//:__subpackages__",
#         "@com_github_cespare_xxhash_v2//:__subpackages__",
#         "@com_github_client9_misspell//:__subpackages__",
#         "@com_github_cncf_udpa_go//:__subpackages__",
#         "@com_github_cncf_xds_go//:__subpackages__",
#         "@com_github_davecgh_go_spew//:__subpackages__",
#         "@com_github_envoyproxy_go_control_plane//:__subpackages__",
#         "@com_github_envoyproxy_protoc_gen_validate//:__subpackages__",
#         "@com_github_franela_goblin//:__subpackages__",
#         "@com_github_ghodss_yaml//:__subpackages__",
#         "@com_github_go_kit_kit//:__subpackages__",
#         "@com_github_go_kit_log//:__subpackages__",
#         "@com_github_go_logfmt_logfmt//:__subpackages__",
#         "@com_github_go_stack_stack//:__subpackages__",
#         "@com_github_gogo_protobuf//:__subpackages__",
#         "@com_github_golang_glog//:__subpackages__",
#         "@com_github_golang_mock//:__subpackages__",
#         "@com_github_golang_protobuf//:__subpackages__",
#         "@com_github_golang_snappy//:__subpackages__",
#         "@com_github_google_go_cmp//:__subpackages__",
#         "@com_github_google_gofuzz//:__subpackages__",
#         "@com_github_google_uuid//:__subpackages__",
#         "@com_github_grpc_ecosystem_grpc_gateway//:__subpackages__",
#         "@com_github_jpillora_backoff//:__subpackages__",
#         "@com_github_json_iterator_go//:__subpackages__",
#         "@com_github_julienschmidt_httprouter//:__subpackages__",
#         "@com_github_klauspost_compress//:__subpackages__",
#         "@com_github_konsorten_go_windows_terminal_sequences//:__subpackages__",
#         "@com_github_kr_logfmt//:__subpackages__",
#         "@com_github_kr_pretty//:__subpackages__",
#         "@com_github_kr_pty//:__subpackages__",
#         "@com_github_kr_text//:__subpackages__",
#         "@com_github_matttproud_golang_protobuf_extensions//:__subpackages__",
#         "@com_github_mbndr_figlet4go//:__subpackages__",
#         "@com_github_modern_go_concurrent//:__subpackages__",
#         "@com_github_modern_go_reflect2//:__subpackages__",
#         "@com_github_montanaflynn_stats//:__subpackages__",
#         "@com_github_mwitkow_go_conntrack//:__subpackages__",
#         "@com_github_oneofone_xxhash//:__subpackages__",
#         "@com_github_pkg_errors//:__subpackages__",
#         "@com_github_pmezard_go_difflib//:__subpackages__",
#         "@com_github_prometheus_client_golang//:__subpackages__",
#         "@com_github_prometheus_client_model//:__subpackages__",
#         "@com_github_prometheus_common//:__subpackages__",
#         "@com_github_prometheus_procfs//:__subpackages__",
#         "@com_github_rogpeppe_fastuuid//:__subpackages__",
#         "@com_github_sirupsen_logrus//:__subpackages__",
#         "@com_github_spaolacci_murmur3//:__subpackages__",
#         "@com_github_stretchr_objx//:__subpackages__",
#         "@com_github_stretchr_testify//:__subpackages__",
#         "@com_github_tidwall_pretty//:__subpackages__",
#         "@com_github_xdg_go_pbkdf2//:__subpackages__",
#         "@com_github_xdg_go_scram//:__subpackages__",
#         "@com_github_xdg_go_stringprep//:__subpackages__",
#         "@com_github_yarikrevich_go_demonizer//:__subpackages__",
#         "@com_github_youmark_pkcs8//:__subpackages__",
#         "@com_github_yuin_goldmark//:__subpackages__",
#         "@com_google_cloud_go//:__subpackages__",
#         "@hide-seek-server//:__subpackages__",
#         "@in_gopkg_alecthomas_kingpin_v2//:__subpackages__",
#         "@in_gopkg_check_v1//:__subpackages__",
#         "@in_gopkg_yaml_v2//:__subpackages__",
#         "@in_gopkg_yaml_v3//:__subpackages__",
#         "@io_bazel_rules_docker//:__subpackages__",
#         "@io_bazel_rules_go//:__subpackages__",
#         "@io_bazel_rules_grafana//:__subpackages__",
#         "@io_bazel_rules_prometheus//:__subpackages__",
#         "@io_opentelemetry_go_proto_otlp//:__subpackages__",
#         "@org_golang_google_appengine//:__subpackages__",
#         "@org_golang_google_genproto//:__subpackages__",
#         "@org_golang_google_grpc//:__subpackages__",
#         "@org_golang_google_protobuf//:__subpackages__",
#         "@org_golang_x_crypto//:__subpackages__",
#         "@org_golang_x_exp//:__subpackages__",
#         "@org_golang_x_lint//:__subpackages__",
#         "@org_golang_x_mod//:__subpackages__",
#         "@org_golang_x_net//:__subpackages__",
#         "@org_golang_x_oauth2//:__subpackages__",
#         "@org_golang_x_sync//:__subpackages__",
#         "@org_golang_x_sys//:__subpackages__",
#         "@org_golang_x_term//:__subpackages__",
#         "@org_golang_x_text//:__subpackages__",
#         "@org_golang_x_tools//:__subpackages__",
#         "@org_golang_x_xerrors//:__subpackages__",
#         "@org_mongodb_go_mongo_driver//:__subpackages__",
#         "@rules_proto//:__subpackages__",
#         "@rules_python//:__subpackages__",
#     ],
# )
