load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "external_proto",
    srcs = [
        "external.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

proto_library(
    name = "internal_proto",
    srcs = [
        "internal.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

go_proto_library(
    name = "external_api",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/YarikRevich/hide-seek-server/internal/api/external-api/v1/proto",
    protos = [
        ":external_proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "internal_api",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/YarikRevich/hide-seek-server/internal/api/internal-api/v1/proto",
    protos = [
        ":internal_proto",
    ],
    visibility = ["//visibility:public"],
)