load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/YarikRevich/hide-seek-server/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//hide-seek-server/tools/printer",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_yarikrevich_game_networking//pkg/config:go_default_library",
        "@com_github_yarikrevich_game_networking//pkg/server:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
