load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/YarikRevich/hide-seek-server/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/api/external-api/v1/implementation:external_implementation",
        "//internal/api/external-api/v1/proto:external_proto",
        "//internal/cache",
        "//internal/interceptors",
        "//internal/monitoring",
        "//tools/params",
        "//tools/printer",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_yarikrevich_go_demonizer//pkg/demonizer:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//encoding/gzip:go_default_library",
    ],
)

go_binary(
    name = "hide-seek-server",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)


container_image(
    name = "image",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/hide-seek-server"],
    files = [":hide-seek-server"],
)
