package(default_visibility = ["//visibility:public"])

#Prometheus

load("@io_bazel_rules_prometheus//prometheus:defs.bzl", "promtool_config_test")

promtool_config_test(
    name = "test_prometheus_config",
    srcs = ["prometheus.yml"],
)

#Grafana

load("@io_bazel_rules_grafana//grafana:grafana.bzl", "json_dashboards")
load("@io_bazel_rules_grafana//grafana:image.bzl", "grafana_image")

json_dashboards(
    name = "grafana_dashboards",
    srcs = ["grafana_dashboards.json"],
)

grafana_image(
    name = "grafana_docker_image",
    dashboards = [":grafana_dashboards"],
    datasources = ["grafana_datasource.yml"],
)
