load("@io_bazel_rules_docker//container:container.bzl", "container_image")

package(default_visibility = ["//visibility:public"])


#Prometheus

DOCKERFILE_PROMETHEUS = """FROM prom/prometheus:latest
LABEL Author="Yaroslav Svitlitskyi"
ADD prometheus.yml /etc/prometheus/prometheus.yml"""

genrule(
    name = "prometheus_dockerfile",
    cmd = "echo '%s' > $@" % DOCKERFILE_PROMETHEUS,
    outs = ["prometheus_dockerfile.stub"],
)

container_image(
    name = "prometheus_docker_image",
    base = "@prometheus_base//image",
    entrypoint = "mv /prometheus.yml .;/bin/prometheus --config.file=prometheus.yml",
    files = ["prometheus.yml"],
)


#Grafana

load("@io_bazel_rules_grafana//grafana:grafana.bzl", "json_dashboards")
load("@io_bazel_rules_grafana//grafana:image.bzl", "grafana_image")

json_dashboards(
    name = "grafana_dashboards",
    srcs = ["grafana_dashboards.json"],
)

grafana_image(
    name = "grafana_docker_image",
    dashboards = [":grafana_dashboards"],
    datasources = ["grafana_datasource.yml"],
)
