load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "interceptors",
    srcs = ["interceptors.go"],
    importpath = "github.com/YarikRevich/hide-seek-server/internal/interceptors",
    visibility = ["//visibility:public"],
    deps = [
        "//hide-seek-server/internal/interceptors/external-api",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
