load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "monitoring",
    srcs = ["monitoring.go"],
    importpath = "github.com/YarikRevich/HideSeek-Server/internal/monitoring",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/monitoring/register_manager",
        "//tools/params",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
