load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "monitoring",
    srcs = ["monitoring.go"],
    importpath = "github.com/YarikRevich/hide-seek-server/internal/monitoring",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/monitoring/register_manager",
        "//tools/params",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
