load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "storage",
    srcs = ["storage.go"],
    importpath = "github.com/YarikRevich/HideSeek-Server/internal/storage",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/storage/cache",
        "//internal/storage/db",
        "//internal/storage/local",
    ],
)
