load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "afk",
    srcs = ["afk.go"],
    importpath = "github.com/YarikRevich/hide-seek-server/internal/services/afk",
    visibility = ["//visibility:public"],
    deps = [
        "//api:external_api",  # keep
        "//internal/storage",
    ],
)
