load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = ["db.go"],
    importpath = "github.com/YarikRevich/hide-seek-server/internal/storage/db",
    visibility = ["//visibility:public"],
    deps = [
        "//hide-seek-server/internal/storage/db/provider",
        "//hide-seek-server/internal/storage/db/provider/collection_manager",
    ],
)
