load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "provider",
    srcs = ["provider.go"],
    importpath = "github.com/YarikRevich/HideSeek-Server/internal/storage/db/provider",
    visibility = ["//:__subpackages__"],
    deps = [
        "//tools/params",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
    ],
)
