load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "provider",
    srcs = ["provider.go"],
    importpath = "github.com/YarikRevich/hide-seek-server/internal/storage/db/provider",
    visibility = ["//:__subpackages__"],
    deps = [
        "//tools/params",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)
