load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ammo",
    srcs = ["ammo.go"],
    importpath = "github.com/YarikRevich/HideSeek-Server/internal/storage/local/ammo",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api/external-api/v1/proto",
        "//internal/storage/local/common",
    ],
)
